--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ opencv-python-headless==4.7.0.68  # For OpenCV, headless version for servers
 gdown==4.7.1  # For downloading files from Google Drive
 numpy==1.25.2  # For numerical computations
 ultralytics==8.0.140  # For YOLO integration
+setuptools
+
+
